# vldb26-adaptive-streams

./: Cargo.toml  README.md
animal_pop_experiments/: deploy_and_run_v3_fix.sh  deploy_exp2_revised.sh  deploy_exp2_vdist.sh  run_exp1_tier5.sh  run_exp1_v3_fix.sh  run_exp2_revised.sh  run_exp3_revised_wave_feb24_1231pm.sh
animal_query/: Cargo.toml
animal_query/src/: animal_fields.rs  animal_utils.rs  main.rs  streaming_features.rs  yolos_utils.rs
ecg_experiments/: log_config.yml  loop_ecg_configs_submission.sh  loop_ecg_configs_wave_submission.sh
ecg_experiments/ecg_preclassifiers/: ecg_agreement_1.json  ecg_individual_correctness.json  ecg_minimum_necessary.json  ecg_minimum_necessary_old.json  ecg_overtake_1.json
face_experiments/: IMDB_split_info__skewed__seed0__truncated_1k.json  IMDB_split_info__std_seed0_truncated_1k.json  face_pip_freeze.txt  log_config.yml  run_face_configs_oscillate.sh  run_face_configs_std.sh  run_face_configs_vdist.sh  run_face_configs_windows.sh
face_experiments/face_configs_std/even_item_step_16666-preclassifier-overtake1/: config-16666-aquifer_greedy_1000_item-window-overtake1.json  config-16666-aquifer_greedy_100_item-window-overtake1.json  config-16666-aquifer_greedy_10_item-window-overtake1.json  config-16666-aquifer_greedy_250_item-window-overtake1.json  config-16666-aquifer_greedy_25_item-window-overtake1.json  config-16666-aquifer_greedy_500_item-window-overtake1.json  config-16666-aquifer_greedy_50_item-window-overtake1.json  config-16666-aquifer_greedy_5_item-window-overtake1.json  config-16666-aquifer_greedy_750_item-window-overtake1.json  config-16666-aquifer_greedy_75_item-window-overtake1.json  config_16666_eddies.json  config_16666_huge.json  config_16666_tiny.json
face_experiments/face_configs_vdist/even_item_step_16666-preclassifier-overtake1/: config-16666-aquifer_greedy_1000_item-window-overtake1.json  config-16666-aquifer_greedy_100_item-window-overtake1.json  config-16666-aquifer_greedy_10_item-window-overtake1.json  config-16666-aquifer_greedy_250_item-window-overtake1.json  config-16666-aquifer_greedy_25_item-window-overtake1.json  config-16666-aquifer_greedy_500_item-window-overtake1.json  config-16666-aquifer_greedy_50_item-window-overtake1.json  config-16666-aquifer_greedy_5_item-window-overtake1.json  config-16666-aquifer_greedy_750_item-window-overtake1.json  config-16666-aquifer_greedy_75_item-window-overtake1.json  config_16666_eddies.json  config_16666_huge.json  config_16666_tiny.json
face_experiments/face_oscillate_configs/wave_step_by_500_every_100-preclassifier-overtake1/: config-step_by_500_every_100-aquifer_greedy_1000_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_100_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_10_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_250_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_25_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_500_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_50_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_5_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_750_item-window-overtake1.json  config-step_by_500_every_100-aquifer_greedy_75_item-window-overtake1.json  config_step_by_500_every_100_eddies.json  config_step_by_500_every_100_huge.json  config_step_by_500_every_100_tiny.json
face_experiments/face_oscillate_configs/wave_step_by_500_every_50-preclassifier-overtake1/: config-step_by_500_every_50-aquifer_greedy_1000_item-window-overtake1.json  config-step_by_500_every_50-aquifer_greedy_100_item-window-overtake1.json  config-step_by_500_every_50-aquifer_greedy_10_item-window-overtake1.json  config_step_by_500_every_50_eddies.json  (+9 more)
face_experiments/face_preclassifiers/: face_overtake_1.json  face_overtake_1_oct13_redo_mean.json  face_overtake_1_original_min_time_undershot.json  face_overtake_1_reserved.json
face_query/: Cargo.toml
face_query/src/: face_utils.rs  main.rs  omz_utils.rs
gpt_query/: Cargo.toml
gpt_query/src/: main.rs
llm_experiments/: llm_pip_freeze.txt  make_gpt_configs_current.py  run_llm_main_configs_aug24_548pm.sh  run_llm_window_configs_may19_422pm.sh  start_chroma.sh
llm_experiments/llm_preclassifiers/: llm_agreement_0.json  llm_agreement_1.json  llm_individual_correctness.json  llm_minimum_necessary.json  llm_minimum_necessary_old.json  llm_overtake_0.json  llm_overtake_1.json
test_queries/: face_recognition_query1.json  face_recognition_query2.json  gpt_query.json  simple_test_query1.json  simple_test_query2.json  simple_test_query5.json  simple_test_query6.json  simple_test_query7.json  time_series_query.json  time_series_query_no_preprocessor.json  time_series_query_no_preprocessor_small_as_eddies copy.json  time_series_query_no_preprocessor_small_as_eddies.json
test_queries_deployment/: animal_pop_query.json  copilot_added_channels.json  face_recognition_query1.json  face_recognition_query1__inline_onnx.json  face_recognition_query1__inline_onnx__backup.json  face_recognition_query1__inline_onnx__cosine.json  face_recognition_query2.json  face_subquery1.json  face_subquery2.json  face_subquery3.json  face_subquery4.json  gpt_query.json  gpt_query_embed_in_db.json  simple_test_query10.json  simple_test_query3.json  simple_test_query4.json  simple_test_query5_text.json  simple_test_query8.json  time_series_query.json  time_series_query_no_preprocessor.json  time_series_query_no_preprocessor_large_as_eddies.json  time_series_query_no_preprocessor_small_as_eddies.json
time_series_query/: Cargo.toml
time_series_query/src/: main.rs
watershed_shared/: Cargo.toml
watershed_shared/src/: async_operators.rs  async_query_builder.rs  basic_pooling.rs  caching.rs  chroma_utils.rs  expression.rs  global_logger.rs  lib.rs  map_api.rs  operators.rs  pooling.rs  pooling2.rs  preclassifier_lang.rs  provenance_encoding.rs  query_builder.rs  scheduler.rs  scheduler_tests.rs  stream_ext.rs  ws_types.rs
(+633 files in other folders)
