[package]
name = "animal_query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11.15"
rmp-serde = "1.3.0"
bytes = "1.7.2"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
tokio-stream = {version = "0.1.16", features = ["sync", "io-util"] }
futures = "0.3.31"

zeromq = "0.4.0"

crossbeam = "0.8.2"
polars = { version = "0.46", features = ["lazy", "polars-io"] }

rand = "0.8.5"
rand_chacha = "0.3"
log = "0.4.22"

log4rs = "1.3.0"

ndarray = { version = "0.16.1", features = ["serde-1"] }
ndarray-npy = "0.9.1"

bytemuck = "1"

image = "0.25.6"
fast_image_resize = {version = "5.2.2", features = ["image"] }
# fast_image_resize = {version = "6.0.0", features = ["image", "bytemuck"] }
# # fimg = { version = "0.4.28", features = ["blur", "real-show"] }
dashmap = { version = "6.1", features = ["serde"] }

walkdir = "2.4.0"

# tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
# crossbeam = "0.8.2"
# dashmap = { version = "5.5.3", features = ["serde"] }
# enum_dispatch = "0.3.11"
# # arrow = { version = "53.1.0", features = ["pyo3", "pyarrow", "ffi"] }
# arrow = { version = "*", features = ["pyo3", "pyarrow", "ffi"] }
pyo3 = "0.24.2"
base64 = "0.22.1"
ort = { version = "=2.0.0-rc.10", features = ["cuda"] }
# # ndarray = { version = "0.15.6", features = ["serde-1"] }
# rand = "0.8.5"
ordered-float = "4.2.0"
# serde = { version = "1.0.164", features = ["derive"] }
# strum = {version="0.25.0", features = ["derive"] }
# toml = "0.8.8"
# either = "1.10.0"
# nshare = { version = "0.10.0", features = ["image", "ndarray"] }
# tokio = { version = "1.40.0", features = ["full"] }
# zeromq = "0.4.0"
# tokio-util = "0.7.12"
# clap = { version = "4.5.17", features = ["derive"] }
# rmp-serde = "1.3.0"
# tap = "1.0.1"
# chromadb = { version = "0.5.0", features = ["bert"] }
# serde_json = "1.0.128"
# itertools = "0.13.0"
# serde_bytes = "0.11.15"
# bytes = "1.7.2"
# bytemuck = "1.18.0"
# ndarray-npy = "0.9.1"
# imageproc = "0.25.0"

watershed_shared = { path = "../watershed_shared" }
imageproc = "0.25.0"
rayon = "1.10.0"
smallvec = "1.15.1"
wide = "0.8.1"
rustfft = "6.4.1"
