[package]
name = "face_query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11.15"
rmp-serde = "1.3.0"
bytes = "1.7.2"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
tokio-stream = {version = "0.1.16", features = ["sync", "io-util"] }
futures = "0.3.31"

zeromq = "0.4.0"

crossbeam = "0.8.2"
polars = { version = "0.46", features = ["lazy", "polars-io"] }

rand = "0.8.5"
log = "0.4.22"

log4rs = "1.3.0"

ndarray = { version = "0.16.1", features = ["serde-1"] }
ndarray-npy = "0.9.1"

bytemuck = "1"

image = "0.25.6"
fast_image_resize = {version = "5.2.2", features = ["image"] }
# # fimg = { version = "0.4.28", features = ["blur", "real-show"] }
dashmap = { version = "6.1", features = ["serde"] }

walkdir = "2.4.0"

pyo3 = "0.24.2"
imageproc = "0.25.0"
rayon = "1.10.0"
smallvec = "1.15.1"
wide = "0.8.1"

watershed_shared = { path = "../watershed_shared" }
