[package]
name = "gpt_query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A query testing tradeoffs of API cost and yes-or-no question answering accuracy for ChatGPT versions gpt-4o and gpt 4o-mini."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11.15"
rmp-serde = "1.3.0"
bytes = "1.7.2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
tokio-stream = {version = "0.1.16", features = ["sync", "io-util"] }
futures = "0.3.31"
zeromq = "0.4.0"
crossbeam = "0.8.2"
polars = { version = "0.46", features = ["lazy", "polars-io"] }
rand = "0.8.5"
log = "0.4.22"
log4rs = "1.3.0"
ndarray = { version = "0.16.1", features = ["serde-1"] }
ndarray-npy = "0.9.1"
bytemuck = "1"

watershed_shared = { path = "../watershed_shared" , features = ["bert"] }
