[package]
name = "time_series_query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A query testing tradeoffs of API cost and yes-or-no question answering accuracy."

[profile.release_with_debug]
inherits = "release"
debug = true
opt-level = 3

[profile.debug_with_tokio_console]
inherits = "dev"
debug = true
opt-level = 1
RUSTFLAGS = "--cfg tokio_unstable"

# [profile.release_with_tokio_console]
# inherits = "release_with_debug"
# debug = true
# opt-level = 3
# RUSTFLAGS = "--cfg tokio_unstable"

[dependencies]
rand = "0.8.5"
log = "0.4.22"
log4rs = "1.3.0"
rustfft = "6.0"

anyhow = "1.0.89"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
serde_bytes = "0.11.15"
rmp-serde = "1.3.0"
bytes = "1.7.2"
bytemuck = "1.18.0"

ndarray = { version = "0.16.1", features = ["serde-1"] }
ndarray-npy = "0.9.1"

zeromq = "0.4.0"
polars = { version = "0.46", features = ["lazy", "polars-io"] }

tokio = { version = "1.40.0", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
tokio-util = "0.7.12"
tokio-stream = {version = "0.1.16", features = ["sync"]}

futures = "0.3.31"

crossbeam = "0.8.2"
dashmap = { version = "6.1", features = ["serde"] }
nohash-hasher = "0.2.0"

# path dependency to shared libarary in the same workspace
watershed_shared = { path = "../watershed_shared" }

# optional tokio console
# futures-batch = "0.6.1"