[package]
name = "watershed_shared"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared code for watershed experiments."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version="0.8.5", features= ["small_rng"]}

either = { version = "1.10.0", features = ["serde"] }
tap = "1.0.1"
ordered-float = "4.2.0"

itertools = "0.13.0"
enum_dispatch = "0.3.11"
strum = {version ="0.25.0", features = ["derive"] }

anyhow = "^1"
backtrace = "0.3"
# log = {version = "0.4.22", features = ["release_max_level_info"] }
log = {version = "0.4.22", features = ["release_max_level_debug"] }
symbol_table = {version="0.3.0", features = ["serde", "global"] }


serde = { version = "1.0.215", features = ["derive", "alloc", "rc"] }
toml = "0.8.8"

dashmap = { version = "6.1", features = ["serde"] }
crossbeam = "0.8.2"

ndarray = { version = "0.16.1", features = ["serde-1", "serde"] }
fast_image_resize = "2.7.3"
image = "0.25.2"
imageproc = "0.25.0"
nshare = { version = "0.10.0", features = ["image", "ndarray"] }

walkdir = "2.4.0"

polars = { version = "0.46", features = ["lazy", "polars-io"] }
zeromq = "0.4.0"

rmp-serde = "1.3.0"
serde_json = "1.0.128"
serde_bytes = "0.11.15"
bytes = "1.7.2"
bytemuck = "1.18.0"
ndarray-npy = "0.9.1"

tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"

chromadb = { version = "2.2" }
rust-bert = { version = "0.23.0", optional = true }

nohash-hasher = "0.2.0"

spaghetto = { version = "0.0.3" , features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
num-traits = "0.2.19"

pyo3 = "0.24.2"

ort = { version = "=2.0.0-rc.10", features = ["cuda"] }
rustc-hash = "2.1.1"
smallvec = {version = "1.15.1", features = ["serde"] }
parking_lot = "0.12.4"
base64 = "0.22.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }

# [dependencies.pyo3]
# version = "0.20.2"
# optional = true
# default-features = true

[dev-dependencies]
simple_logger = "5.0.0"
proptest = "1.0"
proptest-derive = "0.2.0"

# [package.metadata.docs.rs]
# features = ["pyo3"]

[features]
# default = [ "bert"]
default = [ ]
bert = [ "rust-bert" ]